--- a/SWD/SWD/Content/ContentWindow.xaml
+++ b/SWD/SWD/Content/ContentWindow.xaml
@@ -196,7 +196,7 @@
                             <Button x:Name="btn_Row_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold"/>
                         </StackPanel>
                     </Grid>
-                    
+
                     <Grid x:Name="gdComp" Grid.Row="0" Grid.Column="2" Margin="20,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="2*"/>
@@ -226,41 +226,56 @@
                            BorderBrush="LightSlateGray"
                            Background="White"
                            Margin="10"
-/>
+                        />
 
-                        <Label x:Name="lblCompsAmount" Grid.Column="0" Grid.Row="2" Content="Start row:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
+                        <Label x:Name="lblCompWidth" Grid.Column="0" Grid.Row="1" Content="Width:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
+                        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompWidth" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" PreviewKeyDown="tbCompWidth_PreviewKeyDown"  />
+                            <Popup x:Name="popCompWidth" Placement="Top" PlacementTarget="{Binding ElementName=tbCompWidth}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompWidth" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+
+                        <Label x:Name="lblCompHeight" 
+                               Grid.Column="2" Grid.Row="1" 
+                               Content="Height:" 
+                               HorizontalAlignment="Left" VerticalAlignment="Center" 
+                               Margin="10,0,0,0"
+                        />
+                        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompHeight" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" PreviewKeyDown="tbCompHeight_PreviewKeyDown" />
+                            <Popup x:Name="popCompHeight" Placement="Bottom" PlacementTarget="{Binding ElementName=tbCompHeight}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompHeight" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+
+                        <Label x:Name="lblCompCol" 
+                           Grid.Column="0" Grid.Row="2" 
+                           Content="Start column:" 
+                           HorizontalAlignment="Left" VerticalAlignment="Center" 
+                           Margin="10,0,0,0"
+                        />
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompCol" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
+                            <Popup x:Name="popCompCol" Placement="Bottom" PlacementTarget="{Binding ElementName=tbCompCol}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompCol" Background="AliceBlue" Padding="5">Insert value from 1 to 12 and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+                        
+                        <Label x:Name="lblCompRow" 
+                               Grid.Column="2" Grid.Row="2" 
+                               Content="Start row:" 
+                               HorizontalAlignment="Left" VerticalAlignment="Center"                                
+                               Margin="10,0,0,0"
+                        />
+                        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
                             <TextBox x:Name="tbCompRow" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
                             <Popup x:Name="popCompRow" Placement="Top" PlacementTarget="{Binding ElementName=tbCompRow}" IsOpen="False">
                                 <TextBlock x:Name="tbPopCompRow" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
                             </Popup>
                         </StackPanel>
-                        <Label x:Name="lblCompsModify" Grid.Column="2" Grid.Row="2" Content="Start column:" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                            <TextBox x:Name="tbCompCol" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" PreviewKeyDown="tbModify_PreviewKeyDown" />
-                            <Popup x:Name="popCompCol" Placement="Bottom" PlacementTarget="{Binding ElementName=tbCompCol}" IsOpen="False">
-                                <TextBlock x:Name="tbPopCompCol" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
-                            </Popup>
-                        </StackPanel>
-
-                        <Label x:Name="lblCompsWidth" Grid.Column="0" Grid.Row="1" Content="Width:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
-                        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                            <TextBox x:Name="tbCompWidth" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
-                            <Popup x:Name="popCompWidth" Placement="Top" PlacementTarget="{Binding ElementName=tbCompWidth}" IsOpen="False">
-                                <TextBlock x:Name="tbPopCompWidth" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
-                            </Popup>
-                        </StackPanel>
-                        <Label x:Name="lblCompsHeight" Grid.Column="2" Grid.Row="1" Content="Height:" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                            <TextBox x:Name="tbCompHeight" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
-                            <Popup x:Name="popCompHeight" Placement="Bottom" PlacementTarget="{Binding ElementName=tbCompHeight}" IsOpen="False">
-                                <TextBlock x:Name="tbPopCompHeight" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
-                            </Popup>
-                        </StackPanel>
                     </Grid>
                 </Grid>
-                
-                
 
                 <DataGrid x:Name="dgContent" 
                     RowHeaderWidth="30"
@@ -278,7 +293,16 @@
                     Width="Auto"
                     Height="Auto"
                     SelectionUnit="Cell"
-                    Loaded="dgContent_Loaded" SelectedCellsChanged="dgContent_SelectedCellsChanged" PreviewKeyDown="dgContent_PreviewKeyDown">
+                    Loaded="dgContent_Loaded"
+                    SelectedCellsChanged="dgContent_SelectedCellsChanged"
+                    PreviewKeyDown="dgContent_PreviewKeyDown"
+                    
+                    EnableRowVirtualization="True" 
+                    EnableColumnVirtualization="True"
+                    VirtualizingPanel.IsVirtualizing="True"
+                    VirtualizingPanel.VirtualizationMode="Recycling"
+                          
+                    >
                     <DataGrid.Columns>
                         <DataGridTemplateColumn Header="{Binding Title}">
                             <DataGridTemplateColumn.CellTemplate>
@@ -373,6 +397,10 @@
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                 </DataGrid>
+                <Grid x:Name="Overlay" Background="#AAFFFFFF" Visibility="Collapsed">
+                    <TextBlock Text="Loading..." HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
+                </Grid>
+
                 <DataGrid x:Name="dgPages" 
                     Grid.Row="2"
                     Margin="20,20,20,20"                     
